--- a/September/September.ipynb
+++ b/September/September.ipynb
@@ -646,11 +646,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 快排"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def quick_sort(array):\n",
+    "    if len(array) < 2:\n",
+    "        return array\n",
+    "    else:\n",
+    "        mid = array[0]\n",
+    "        left = [x for x in array if x <= mid]\n",
+    "        right = [x for x in array if x > mid]\n",
+    "        return quick_sort(left) + [mid] + quick_sort(more_than_pivot)\n"
+   ]
   },
   {
    "cell_type": "code",
